# mnist-from-scratch

./: .gitignore  CMakeLists.txt  README.md  RUN
misc/: network.py  network2.py  pa021_minimal_mnist.py
src/: io.h  layers.h  main.cpp  math_fn.h  nabla.h  network.h  trainer.h  types.h  vec_ops.h
